{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 25,
  "lineage": "ca2814c8-8d06-ff87-87a0-b392c951cc8e",
  "resources": [
    {
      "module": "module.webservers",
      "mode": "managed",
      "type": "aws_elb",
      "name": "my_first_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:592414514106:loadbalancer/terraform-elb",
            "availability_zones": [
              "ap-southeast-2a",
              "ap-southeast-2b",
              "ap-southeast-2c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "terraform-elb-1976717696.ap-southeast-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "terraform-elb",
            "idle_timeout": 60,
            "instances": [
              "i-07ae68f1dcfe79459",
              "i-083254777ff14554c",
              "i-093bf1913a93e806b"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "terraform-elb",
            "security_groups": [
              "sg-01ab888adee5baf6c"
            ],
            "source_security_group": "592414514106/webserver_sg",
            "source_security_group_id": "sg-01ab888adee5baf6c",
            "subnets": [
              "subnet-1ac24c42",
              "subnet-34ecf053",
              "subnet-922029db"
            ],
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "module.webservers.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webservers",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:592414514106:security-group/sg-01ab888adee5baf6c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ab888adee5baf6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "101.100.129.251/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "101.100.129.251/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_sg",
            "name_prefix": null,
            "owner_id": "592414514106",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-a6dbefc1"
          }
        }
      ]
    },
    {
      "module": "module.webservers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "101.100.129.251/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4137775985",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab888adee5baf6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.webservers.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_mytest",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 10000,
            "id": "sgrule-2838612415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01ab888adee5baf6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 10000,
            "type": "ingress"
          },
          "dependencies": [
            "module.webservers.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webservers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outgoing",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2607691474",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-01ab888adee5baf6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.webservers.aws_security_group.webserver_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webservers",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "101.100.129.251/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3666105696",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-01ab888adee5baf6c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.webservers.aws_security_group.webserver_sg"
          ]
        }
      ]
    }
  ]
}